# swh-model

./: .copier-answers.yml  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS  MANIFEST.in  Makefile.local  PKG-INFO  README-dev.md  README.md  README.rst  mypy.ini  pyproject.toml  pytest.ini  requirements-cli.txt  requirements-swh.txt  requirements-test.txt  requirements.txt  setup.py  swh-model_0.0.1.orig.tar.gz.delta  swh-model_0.0.1.orig.tar.gz.id  swh-model_0.0.10.orig.tar.gz.delta  swh-model_0.0.10.orig.tar.gz.id  swh-model_0.0.11.orig.tar.gz.delta  swh-model_0.0.11.orig.tar.gz.id  swh-model_0.0.12.orig.tar.gz.delta  swh-model_0.0.12.orig.tar.gz.id  swh-model_0.0.13.orig.tar.gz.delta  swh-model_0.0.13.orig.tar.gz.id  swh-model_0.0.14.orig.tar.gz.delta  swh-model_0.0.14.orig.tar.gz.id  swh-model_0.0.15.orig.tar.gz.delta  swh-model_0.0.15.orig.tar.gz.id  swh-model_0.0.16.orig.tar.gz.delta  swh-model_0.0.16.orig.tar.gz.id  swh-model_0.0.17.orig.tar.gz.delta  swh-model_0.0.17.orig.tar.gz.id  swh-model_0.0.18.orig.tar.gz.delta  swh-model_0.0.18.orig.tar.gz.id  swh-model_0.0.19.orig.tar.gz.delta  (+275 more)
debian/: changelog  control  rules
docs/: Makefile  Makefile.local  cli.rst  data-model.rst  iana-swh-template.txt  index.rst  persistent-identifiers.rst
docs/images/: .gitignore  Makefile  swh-merkle-dag.dia
swh.model.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
swh/model/: cli.py  collections.py  discovery.py  exceptions.py  from_disk.py  git.py  git_objects.py  hashutil.py  hypothesis_strategies.py  identifiers.py  merkle.py  model.py  swhids.py  test_identifiers.py  toposort.py  validators.py
swh/model/fields/: __init__.py  compound.py  hashes.py  simple.py
swh/model/tests/: conftest.py  generate_testdata.py  generate_testdata_from_disk.py  swh_model_data.py  test_cli.py  test_collections.py  test_discovery.py  test_from_disk.py  test_generate_testdata.py  test_git.py  test_git_slow.py  test_hashutil.py  test_hypothesis_strategies.py  test_identifiers.py  test_merkle.py  test_model.py  test_swh_model_data.py  test_swhids.py  test_toposort.py  test_validators.py
swh/model/tests/data/dir-folders/: sample-folder.tgz
swh/model/tests/fields/: test_compound.py  test_hashes.py  test_simple.py
